@@ -1,13 +1,29 @@
 package academy.everyonecodes.java.optionals.sets.exercise2;
 
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 public class BasicDictionary {
-    private Set<String> dictionary;
+    private List<String> dictionary;
 
     public BasicDictionary() {
-        dictionary =  new LinkedHashSet<>(List.of("hi", "house", "dog", "cat", "table", "chair", "elephant"));
+        dictionary = List.of(
+                "hi",
+                "house",
+                "dog",
+                "cat",
+                "table",
+                "chair",
+                "elephant");
+    }
+
+    public List<String> findUnknownsWords(String text) {
+        LinkedHashSet<String> finalList = new LinkedHashSet<>();
+        List<String> lines = Arrays.asList(text.split(" "));
+        lines.stream()
+                .map(String::toLowerCase)
+                .filter(word -> !dictionary.contains(word) && !word.isBlank())
+                .forEach(word -> finalList.add(word));
+        return new ArrayList<>(finalList);
+
     }
 }
